...
            
            Button(action: {
                withAnimation(.spring) {
                    vm.signupAction()
                }
            }, label: {
                Text("Signup")
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(.blue)
                    .clipShape(RoundedRectangle(cornerRadius: 10))
                    .foregroundStyle(.white)
            })
...
